# CompetitiveProgramming

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  functions.cpp  runner  template.cpp  template.py
Algo/: .clang-format  CMakeLists.txt
Algo/data_structures/: BinaryTrie.hpp  CMakeLists.txt  ModInt.hpp  Z.hpp  ordered_mset.hpp
Algo/graphs/: EulerTour.hpp  Grid.cpp  bellman_ford.cpp  dijkstra.cpp  floyd_warshall.cpp  graphs.hpp
Algo/graphs_trees/: CMakeLists.txt  LCATree.hpp  Tree.hpp
Algo/number_theory/: CMakeLists.txt  combinatorics.hpp  modular.hpp  sieve.hpp
Algo/range_queries/: CMakeLists.txt  LazySegmentTree.hpp  SparseTable.hpp
Algo/tests/: CMakeLists.txt  in.txt  test_binary_trie.cpp  test_et_lca.cpp  test_lazy_segment_tree.cpp  test_modint.cpp  test_number_theory.cpp  test_ordered_mset.cpp  test_sparse_table.cpp
AtCoder/Beginner Contest 247/: A_-_Move_Right.cpp  B_-_Unique_Nicknames.cpp
AtCoder/abc253/: A_-_Median.cpp  B_-_Distance_Between_Tokens.cpp  C_-_Max_-_Min_Query.cpp  E_-_Distance_Sequence_FAILED.cpp  ReadME.md
AtCoder/abc254/: A_-_Last_Two_Digits.cpp  B_-_Practical_Computing.cpp  C_-_K_Swap.cpp  D_-_Together_Square.cpp  D_-_Together_Square_FAILED.cpp  ReadME.md
AtCoder/abc260/: A_-_A_Unique_Letter.cpp  D_-_Draw_Your_Cards
AtCoder/abc265/: C_-_Belt_Conveyor.cpp  D_-_Iroha_and_Haiku_New_ABC_Edition.cpp
CSES/DynamicProgramming/: Array_Description.cpp  Array_Description_FAILED.cpp  Book_Shop.cpp  Coin_Combinations_I.cpp  Coin_Combinations_II.cpp  Counting_Towers.cpp  Dice_Combinations.cpp  Edit_Distance.cpp  Elevator_Rides.cpp  Grid_Paths.cpp  Increasing_Subsequence.cpp  Money_Sums.cpp  Projects.cpp  Rectangle_Cutting.cpp  Removal_Game.cpp  Removing_Digits.cpp  Two_Sets_II.cpp
CSES/GraphAlgorithms/: .fuse_hidden0000005300000002  .fuse_hidden0000008c00000003  Building_Roads.cpp  Building_Teams.cpp  Counting_Rooms.cpp  Cycle_Finding  Cycle_Finding.cpp  Flight_Discount  Flight_Discount.cpp  Flight_Routes.cpp  High_Score.cpp  Labyrinth.cpp  Message_Route.cpp  README.md  Shortest_Routes_I.cpp  Shortest_Routes_II.cpp  Shortest_Routes_II_BfsNTimes_TLE.cpp
CSES/IntroductoryProblems/: Coin_Piles.cpp  Digit_Queries.cpp  Gray_Code.cpp  Increasing_Array.cpp  Missing_Number.cpp  Number_Spiral.cpp  Permutations.cpp  Repetitions.cpp  Trailing_Zeros.cpp  Two_Knights.cpp  Two_Sets.cpp  Weird_Algorithm.cpp
CSES/Mathematics/: Binomial_Coefficients.cpp  Counting_Divisors.cpp  Counting_Grids.cpp  Creating_Strings_II.cpp  Distributing_Apples.cpp  Divisor_Analysis.cpp  Fibonacci_Numbers.cpp  Josephus_Queries.cpp  Prime_Multiples.cpp
CSES/RangeQueries/: Dynamic_Range_Minimum_Queries.cpp  Dynamic_Range_Sum_Queries.cpp  Dynamic_Range_Sum_Queries_FAILED.cpp  Range_Update_Queries.cpp  Range_Update_Queries_LAZY_PROPAGATION.cpp  Range_Xor_Queries.cpp
CSES/SortingAndSearching/: Apartments.cpp  Collecting_Numbers.cpp  Collecting_Numbers_II.cpp  Concert_Tickets.cpp  Distinct_Numbers.cpp  Factory_Machines.cpp  Ferris_Wheel.cpp  Josephus_Problem_I.cpp  Josephus_Problem_II.cpp  Movie_Festival.cpp  Nested_Ranges_Check.cpp  Playlist.cpp  Restaurant_Customers.cpp  Room_Allocation.cpp  Sum_of_Two_Values.cpp  Towers.cpp  Traffic_Lights.cpp
Debug/: .gitignore  CMakeLists.txt  brute.cpp  generate_and_test.py  output_sol.txt  sol.cpp
Misc/: A_Marathon.cpp  Amazon.cpp  CIRCULAR_XOR.cpp  C_Tennis_Championship.cpp  E_Porcelain  E_Porcelain.cpp  IVB_min_cost_path.cpp  JosephusProblem1.cpp  MedianOf2SortedArrays.cpp  NimbleEdgeQ1.cpp  SpecialString.cpp  temp.cpp
SPOJ_Solutions/: .gitignore  README.md
Snippets/: CMakeLists.txt
Snippets/functions/: LIS.hpp
Snippets/graphs_trees/: DSU.hpp  FlowGraph.hpp
Snippets/misc/: LazySegmentTreeOG.hpp  functions.cpp  script.py
Snippets/number_theory/: Z.hpp  combinatorics.hpp  sieve.hpp
Snippets/range_queries/: Fenwick.hpp  LazySegmentTree.hpp  SegmentTree.hpp  SparseTable.hpp
Snippets/strings/: zFunction.hpp
Templates/: CMakeLists.txt  fb_template.cpp  functions.cpp  template.py
Templates/Snippets/: LIS.hpp  SegTree.hpp  SparseTable.hpp  Z.hpp  seive.hpp  sig_cp.cpp  sig_cp.hpp
Templates/data_structures/: BinaryTrie.hpp  DSU.hpp  LazySegmentTree.hpp  OSet.hpp  SparseTable.hpp  Z.hpp  ordered_mset.hpp
Templates/functions/: LIS.hpp  seive.hpp
Templates/graphs_trees/: LCA.hpp  LCATree.hpp  Tree.hpp
Templates/number_theory/: combinatorics.hpp  modular.hpp  sieve.hpp
Templates/range_queries/: LazySegmentTree.hpp  SparseTable.hpp
(+335 files in other folders)
